minor fixes + fixed scrollbars

--- a/presentation.css
+++ b/presentation.css
@@ -1,14 +1,11 @@
-
-
-body::-webkit-scrollbar {
-    width: 0.6em;
-  }
-   
-body::-webkit-scrollbar-track {
+::-webkit-scrollbar {
+  width: 0.6em;
+}
+::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(15, 23, 36, 0.3);
 }
-  
-body::-webkit-scrollbar-thumb {
+
+::-webkit-scrollbar-thumb {
   border-radius: 20px;
   background-color: darkgrey;
   outline: 1px solid slategrey;
@@ -39,31 +36,35 @@ body::-webkit-scrollbar-thumb {
   display: none;
 }
 
-.swiper-button-next, .swiper-rtl .swiper-button-prev {
-    right: 10px;
-    left: auto;
+.swiper-button-next,
+.swiper-rtl .swiper-button-prev {
+  right: 10px;
+  left: auto;
 }
-.swiper-button-next, .swiper-button-prev {
-    position: absolute;
-    top: 50%;
-    width: calc(var(--swiper-navigation-size)/ 44 * 27);
-    height: var(--swiper-navigation-size);
-    margin-top: calc(0px - (var(--swiper-navigation-size)/ 2));
-    z-index: 10;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.swiper-button-next,
+.swiper-button-prev {
+  position: absolute;
+  top: 50%;
+  width: calc(var(--swiper-navigation-size) / 44 * 27);
+  height: var(--swiper-navigation-size);
+  margin-top: calc(0px - (var(--swiper-navigation-size) / 2));
+  z-index: 10;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.swiper-button-next:after, .swiper-rtl .swiper-button-prev:after {
-    content: 'next';
+.swiper-button-next:after,
+.swiper-rtl .swiper-button-prev:after {
+  content: "next";
 }
-.swiper-button-next:after, .swiper-button-prev:after {
-    font-family: swiper-icons;
-    font-size: var(--swiper-navigation-size);
-    text-transform: none!important;
-    letter-spacing: 0;
-    text-transform: none;
-    font-variant: initial;
-    line-height: 1;
+.swiper-button-next:after,
+.swiper-button-prev:after {
+  font-family: swiper-icons;
+  font-size: var(--swiper-navigation-size);
+  text-transform: none !important;
+  letter-spacing: 0;
+  text-transform: none;
+  font-variant: initial;
+  line-height: 1;
 }
